--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -224,6 +224,20 @@ eprint = {
 }
 }
 
+% Kennedy and O'Hagan
+@article{KOH,
+author = {Kennedy, Marc C. and O'Hagan, Anthony},
+title = {Bayesian calibration of computer models},
+journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+volume = {63},
+number = {3},
+pages = {425-464},
+keywords = {Calibration, Computer experiments, Deterministic models, Gaussian process, Interpolation, Model inadequacy, Sensitivity analysis, Uncertainty analysis},
+doi = {https://doi.org/10.1111/1467-9868.00294},
+url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/1467-9868.00294},
+eprint = {https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/1467-9868.00294},
+year = {2001}
+}
 
 
 %  ---------------------------------------------------------------------------------------------------
@@ -889,19 +903,8 @@ Statistics},
    month={July}
   }
 
-
-%
-%
-% TODO: not yet categorized
-%
-%
-%
-
-
-
-
 %  ---------------------------------------------------------------------------------------------------
-% GP Uncertainty Propagation
+% Uncertainty Propagation for surrogates
 %  ---------------------------------------------------------------------------------------------------
 
 % Utilize an adaptive scheme somewhat resembling likelihood tempering. Their adaptive approach requires constructing an approximate density function. 
@@ -916,6 +919,24 @@ volume = {30},
 journal = {Neural Computation},
 doi = {10.1162/neco_a_01127}
 }
+
+@article{BurknerSurrogate,
+  title={Uncertainty Quantification and Propagation in Surrogate-based Bayesian Inference},
+  author={Philipp Reiser and Javier Enrique Aguilar and Anneli Guthke and Paul-Christian Burkner},
+  journal={ArXiv},
+  year={2023},
+  volume={abs/2312.05153},
+  url={https://api.semanticscholar.org/CorpusID:266149965}
+}
+
+
+
+%
+%
+% TODO: not yet categorized
+%
+%
+%
 
 
 % ---------------------------------------------------------------------------------------------------
